--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_marginBottom="@dimen/_16dp"
-        app:srcCompat="@drawable/sleep"/>
+        app:srcCompat="@drawable/sleeping"/>
 
     <TextView
         style="@style/title"
