--- a/app/src/main/res/layout/item_current.xml
+++ b/app/src/main/res/layout/item_current.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="night"
+            type="com.abdosharaf.sleeptrackerrecycler.database.SleepNight" />
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,8 +22,8 @@
             style="@style/label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/_8dp"
             android:text="@string/current" />
 
         <LinearLayout
@@ -33,7 +42,8 @@
                 style="@style/item_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="12:05 Am" />
+                app:getTimeFormatted="@{night.startTime}"
+                tools:text="12:05 Am" />
         </LinearLayout>
 
     </LinearLayout>
