--- a/app/src/main/res/values-ar/styles.xml
+++ b/app/src/main/res/values-ar/styles.xml
@@ -9,11 +9,19 @@
         <item name="android:textSize">@dimen/button_text</item>
     </style>
 
-    <style name="clear_button">
+    <style name="red_button">
         <item name="android:background">@drawable/clear_button_background</item>
         <item name="android:fontFamily">@font/cairo</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/button_text</item>
+    </style>
+
+    <style name="cancel_button">
+        <item name="android:background">@drawable/cancel_button_background</item>
+        <item name="android:fontFamily">@font/cairo</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/main_color</item>
         <item name="android:textSize">@dimen/button_text</item>
     </style>
 
@@ -31,11 +39,28 @@
         <item name="android:textSize">@dimen/label_text_size</item>
     </style>
 
+    <style name="details_label">
+        <item name="android:fontFamily">@font/cairo</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/label_text_size</item>
+    </style>
+
     <style name="item_text">
         <item name="android:fontFamily">@font/cairo</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/item_text_size</item>
         <item name="android:textAlignment">viewEnd</item>
+    </style>
+
+    <style name="dialog_text">
+        <item name="android:fontFamily">@font/cairo</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/dialog_text_size</item>
+        <item name="android:layout_marginTop">@dimen/_32dp</item>
+        <item name="android:layout_marginBottom">@dimen/_32dp</item>
+        <item name="android:layout_marginStart">@dimen/_16dp</item>
+        <item name="android:layout_marginEnd">@dimen/_16dp</item>
     </style>
 
     <style name="empty_state_text">
@@ -49,5 +74,11 @@
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="details_text">
+        <item name="android:fontFamily">@font/cairo</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/details_text_size</item>
+    </style>
 
 </resources>
